homepage-url-change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Tandrima94.github.io/profile",
+  "homepage": "https://Tandrima94.github.io/profilewebsite",
   "name": "profile-website",
   "version": "1.0.0",
   "description": "",
