--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "16.13.1",
     "react-particles-js": "3.3.0",
     "react-scripts": "^4.0.1",
+    "react-svg": "^11.1.4",
     "request": "^2.79.0",
     "webfontloader": "1.6.28"
   },
