--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tandrimab.github.io/''",
+  "homepage": "https://bdebopam.github.io/",
   "name": "profile-website",
   "version": "1.0.0",
   "description": "",
