--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^4.0.1",
     "react-svg": "^11.1.4",
     "request": "^2.79.0",
+    "serve": "^11.3.2",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
