--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-custom-scroller": "1.0.0",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-meta-tags": "^1.0.0",
     "react-scripts": "^4.0.1",
     "react-svg": "^11.1.4",
